@@ -1,3 +1,11 @@
+2002-01-26  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+
+	* dae/opd_proc.c: tiny clean
+
+	* doc/oprofile.sgml: spell fix
+ 
 2002-01-26  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: update
